# akhenaten-tts

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows.yml
cmake/: CopyScripts.cmake  Libpiper.cmake  ThirdPartyDependencies.cmake  apply_patches.cmake  download_file.cmake
src/: args_parser.cpp  main.cpp  phrases_parser.cpp  phrases_parser.hpp  script.hpp  script_parser.cpp  script_parser.hpp  tts-config.cpp  tts-config.hpp  tts.cpp  tts.hpp
src/scripts/: enSynthCfg.lua  localization_en.lua  tts-config.lua
